--- a/templates/forms/announcement-create-edit-form.html
+++ b/templates/forms/announcement-create-edit-form.html
@@ -1,57 +1,74 @@
 {% load widget_tweaks %}
-<form action="{% url 'announcements.manager.create' %}" method="post" novalidate>
+<form action="." method="post" novalidate>
     {% csrf_token %}
 
     <div class="form-group">
         <label for="{{ form.title.id_for_label }}">{{ form.title.label }}</label>
         {{ form.title|add_class:"form-control" }}
+        <p class="py-1 text-muted">{{ form.title.help_text}}</p>
     </div>
     <div class="form-group">
         <label for="{{ form.description.id_for_label }}">{{ form.description.label }}</label>
         {{ form.description|add_class:"form-control wysiwyg" }}
+        <p class="py-1 text-muted">{{ form.description.help_text}}</p>
     </div>
     <div class="form-group">
         <label for="{{ form.audience.id_for_label }}">{{ form.audience.label }}</label>
         {{ form.audience|add_class:"form-check-input" }}
+        <p class="py-1 text-muted">{{ form.audience.help_text}}</p>
     </div>
     <div class="form-group row">
         <div class="col-md-6">
             <label for="{{ form.url.id_for_label }}">{{ form.url.label }}</label>
             {{ form.url|add_class:"form-control" }}
+            <p class="py-1 text-muted">{{ form.url.help_text}}</p>
         </div>
         <div class="col-md-6">
             <label for="{{ form.keywords.id_for_label }}">{{ form.keywords.label }}</label>
             {{ form.keywords|add_class:"form-control" }}
+            <p class="py-1 text-muted">{{ form.keywords.help_text}}</p>
         </div>
     </div>
     <div class="form-group row">
         <div class="col">
             <label for="{{ form.start_date.id_for_label }}">{{ form.start_date.label }}</label>
             {% render_field form.start_date type="date" class="form-control" %}
+            <p class="py-1 text-muted">{{ form.start_date.help_text}}</p>
         </div>
         <div class="col">
             <label for="{{ form.end_date.id_for_label }}">{{ form.end_date.label }}</label>
             {% render_field form.end_date type="date" class="form-control" %}
+            <p class="py-1 text-muted">{{ form.end_date.help_text}}</p>
         </div>
     </div>
     <div class="form-group row">
         <div class="col">
             <label for="{{ form.contact_name.id_for_label }}">{{ form.contact_name.label }}</label>
             {{ form.contact_name|add_class:"form-control" }}
+            <p class="py-1 text-muted">{{ form.contact_name.help_text}}</p>
         </div>
         <div class="col">
             <label for="{{ form.contact_phone.id_for_label }}">{{ form.contact_phone.label }}</label>
             {% render_field form.contact_phone type="tel" class="form-control" %}
+            <p class="py-1 text-muted">{{ form.contact_phone.help_text}}</p>
         </div>
         <div class="col">
             <label for="{{ form.contact_email.id_for_label }}">{{ form.contact_email.label }}</label>
             {% render_field form.contact_email type="email" class="form-control" %}
+            <p class="py-1 text-muted">{{ form.contact_email.help_text}}</p>
         </div>
     </div>
     <div class="form-group">
         <label for="{{ form.posted_by.id_for_label }}">{{ form.posted_by.label }}</label>
         {{ form.posted_by|add_class:"form-control" }}
+        <p class="py-1 text-muted">{{ form.posted_by.help_text}}</p>
     </div>
     {{ form.author }}
-    <input type="submit" class="btn btn-success btn-lg mb-4" type="submit" value="Submit for Review">
+    {% if request.user.is_staff %}
+    <div class="form-group">
+        <label for="{{ form.status.id_for_label }}">{{ form.status.label }}</label>
+        {{ form.status|add_class:"form-control" }}
+    </div>
+    {% endif %}
+    <input class="btn btn-success btn-lg mb-4" type="submit" value="Update">
 </form>
