Updated AnnouncementManager filters, forms and added ongoing announcements to home

--- a/templates/forms/announcement-create-edit-form.html
+++ b/templates/forms/announcement-create-edit-form.html
@@ -1,5 +1,5 @@
 {% load widget_tweaks %}
-<form action="." method="post" novalidate>
+<form action="" method="post" novalidate>
     {% csrf_token %}
 
     <div class="form-group">
