--- a/templates/home.html
+++ b/templates/home.html
@@ -21,43 +21,61 @@
 </div>
 {% endblock %}
 {% block content_body %}
-{% if announcements %}
 <div class="announcements">
     <div class="row">
-        {% for item in announcements %}
-            <div class="col-4">
-                <div class="card mb-4">
-                    <h2 class="card-header">{{ item.title }}</h2>
-                    <div class="card-block">
-                        <p>{{ item.description|safe|truncatewords:25 }}</p>
-                        <dl>
-                            <dt>Audience: </dt>
-                            <dd>
-                                <ul class="list-unstyled list-inline">
-                                {% for aud in item.audience.all %}
-                                    <li class="list-inline-item"><a class="badge {{ aud.name|audience_badge }}" href="{% url 'announcements.home' %}?audience={{ aud.name|urlencode }}">{{ aud.name }}</a></li>
-                                {% endfor %}
-                                </ul>
-                            </dd>
-                        </dl>
-                        <dl class="row">
-                            <dt class="col-sm-4">Contact</dt>
-                            <dd class="col-sm-8">{{ item.contact_name }}</dd>
-                            <dt class="col-sm-4">Phone</dt>
-                            <dd class="col-sm-8"><a href="tel:{{ item.contact_phone|strip_phone }}">{{ item.contact_phone }}</a></dd>
-                            <dt class="col-sm-4">Email</dt>
-                            <dd class="col-sm-8"><a href="mailto:{{ item.contact_email }}">{{ item.contact_email }}</a></dd>
-                        </dl>
+        <div class="col-md-9">
+            {% if announcements %}
+            <div class="row">
+                {% for item in announcements %}
+                    <div class="col-6">
+                        <div class="card mb-4">
+                            <h2 class="card-header">{{ item.title }}</h2>
+                            <div class="card-block">
+                                <p>{{ item.description|safe|truncatewords:25 }}</p>
+                                <dl>
+                                    <dt>Audience: </dt>
+                                    <dd>
+                                        <ul class="list-unstyled list-inline">
+                                        {% for aud in item.audience.all %}
+                                            <li class="list-inline-item"><a class="badge {{ aud.name|audience_badge }}" href="{% url 'announcements.home' %}?audience={{ aud.name|urlencode }}">{{ aud.name }}</a></li>
+                                        {% endfor %}
+                                        </ul>
+                                    </dd>
+                                </dl>
+                                <dl class="row">
+                                    <dt class="col-sm-4">Contact</dt>
+                                    <dd class="col-sm-8">{{ item.contact_name }}</dd>
+                                    <dt class="col-sm-4">Phone</dt>
+                                    <dd class="col-sm-8"><a href="tel:{{ item.contact_phone|strip_phone }}">{{ item.contact_phone }}</a></dd>
+                                    <dt class="col-sm-4">Email</dt>
+                                    <dd class="col-sm-8"><a href="mailto:{{ item.contact_email }}">{{ item.contact_email }}</a></dd>
+                                </dl>
+                            </div>
+                            <div class="card-footer">
+                                <a class="btn btn-primary btn-block" href="{% url 'announcements.detail' slug=item.slug %}">Learn More</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <a class="btn btn-primary btn-block" href="{% url 'announcements.detail' slug=item.slug %}">Learn More</a>
-                    </div>
+                {% endfor %}
                 </div>
-            </div>
-        {% endfor %}
+            {% else %}
+                <p>No announcements found.</p>
+            {% endif %}
+        </div>
+        <div class="col-md-3">
+            <h2>Ongoing Announcements</h2>
+            {% if ongoing %}
+                <ul class="list-unstyled">
+                {% for item in ongoing %}
+                    <li class="list-item py-2">
+                        <a href="{% url 'announcements.detail' slug=item.slug %}">{{ item.title }}</a>
+                    </li>
+                {% endfor %}
+                </ul>
+            {% else %}
+                <p>No Ongoing Announcements Found</p>
+            {% endif %}
+        </div>
     </div>
 </div>
-{% else %}
-<p>No announcements found.</p>
-{% endif %}
 {% endblock %}
