--- a/templates/manager/manager-base.html
+++ b/templates/manager/manager-base.html
@@ -5,3 +5,7 @@
 {% endblock %}
 {% block content_body %}
 {% endblock %}
+{% block footer_scripts %}
+  {{ block.super }}
+  <script type="text/javascript" src="{% static 'js/manager.min.js' %}"></script>
+{% endblock %}
