--- a/templates/manager/announcement-create.html
+++ b/templates/manager/announcement-create.html
@@ -29,7 +29,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="newUserModalLabel"><span class="badge badge-success">New</span> Announcements Features</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button id="newUserModelClose" type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
