--- a/templates/manager/announcement-create.html
+++ b/templates/manager/announcement-create.html
@@ -37,9 +37,9 @@
             <h3>Announcement Editing</h3>
             <p>Announcements can now be edited after they've been posted. By navigating to the <span class="badge badge-primary">Manager</span> link at the top of the page, you can view announcements you've posted. Currently, announcements can only be edited by the original creator of the announcement.</p>
             <h3>Status Check</h3>
-            <p>The announcements on the <span class="badge badge-primary">Manager</span> page are organized by their current approval status. When an announcement is first posted, it will be placed in the "Pending Announcements" tab. Once it has been approved is will be moved into the "Published Announcements" tab.</p>
+            <p>The announcements on the <span class="badge badge-primary">Manager</span> page are organized by their current approval status. When an announcement is created, it will be placed in the "Pending Announcements" tab. Once it has been approved it will be moved into the "Published Announcements" tab.</p>
             <h3>We Welcome Feedback</h3>
-            <p>We always value feedback, so please feel free to contact at <a href="mailto:webcom@ucf.edu">webcom@ucf.edu</a> if you have any questions regarding the changes.</p>
+            <p>We always value feedback, so please contact us at <a href="mailto:webcom@ucf.edu">webcom@ucf.edu</a> if you have any questions regarding the changes.</p>
           </div>
           <div class="modal-footer">
             <button id="newUserModalBtn" type="button" class="btn btn-success" data-dismiss="modal">Okay</button>
