--- a/templates/forms/announcement-create-edit-form.html
+++ b/templates/forms/announcement-create-edit-form.html
@@ -14,7 +14,11 @@
     </div>
     <div class="form-group">
         <label for="{{ form.audience.id_for_label }}">{{ form.audience.label }}</label>
-        {{ form.audience|add_class:"form-check-input" }}
+        <ul class="list-unstyled pl-5">
+        {% for cb in form.audience %}
+          <li><input class="form-check-input" type="checkbox" id="{{ cb.id_for_label }}" name="{{ cb.name }}"> {{cb.choice_label}}</li>
+        {% endfor %}
+        </ul>
         <p class="py-1 text-muted">{{ form.audience.help_text}}</p>
     </div>
     <div class="form-group row">
