Updated classes to announcement cards to support a better mobile layout

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,12 +20,12 @@
 {% endblock %} {% block content_body %}
 <div class="announcements">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-lg-9">
       {% if announcements %}
       <div class="row">
         {% for item in announcements %}
-        <div class="col-6">
-          <div class="card mb-4">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 mb-4">
+          <div class="card h-100">
             <h2 class="h3 card-header">{{ item.title }}</h2>
             <div class="card-block">
               <p>{{ item.description|safe|truncatewords:25 }}</p>
@@ -59,7 +59,7 @@
       <p>No announcements found.</p>
       {% endif %}
     </div>
-    <div class="col-md-3">
+    <div class="col-lg-3">
       <h2>Ongoing Announcements</h2>
       {% if ongoing %}
       <ul class="list-unstyled">
