Added main-site updated nav styles

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,3 +8,8 @@ $footer-gray: #3e3e3e !default;
 $footer-gray-light: #d4d4d4 !default;
 
 $gray-darker: darken($footer-gray, 10) !default;
+
+// Navbar variables
+$nav-height: 4.35rem;
+$nav-height-md: 6rem;
+$nav-text-shadow: 0 1px 0 rgba(0, 0, 0, .25);
