--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -6,7 +6,7 @@
                     <span class="navbar-toggler-text">Navigation</span>
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div id="header-menu" class="collapse navbar-collapse" area-expanded="false">
+            <div id="header-menu" class="collapse navbar-collapse" aria-expanded="false">
                 <ul class="nav navbar-nav nav-fill">
                 {% for item in header_menu_items %}
                     <li class="nav-item">
