--- a/templates/forms/announcement-create-edit-form.html
+++ b/templates/forms/announcement-create-edit-form.html
@@ -36,12 +36,12 @@
     <div class="form-group row">
         <div class="col">
             <label for="{{ form.start_date.id_for_label }}">{{ form.start_date.label }}</label>
-            {% render_field form.start_date type="date" class="form-control" %}
+            {% render_field form.start_date type="date" class="form-control date-picker" %}
             <p class="py-1 text-muted">{{ form.start_date.help_text}}</p>
         </div>
         <div class="col">
             <label for="{{ form.end_date.id_for_label }}">{{ form.end_date.label }}</label>
-            {% render_field form.end_date type="date" class="form-control" %}
+            {% render_field form.end_date type="date" class="form-control date-picker" %}
             <p class="py-1 text-muted">{{ form.end_date.help_text}}</p>
         </div>
     </div>
