--- a/templates/manager/manager-base.html
+++ b/templates/manager/manager-base.html
@@ -12,5 +12,6 @@
 {% block footer_scripts %}
   {{ block.super }}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha256-KM512VNnjElC30ehFwehXjx1YCHPiQkOPmqnrWtpccM=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js" integrity="sha256-+4KHeBj6I8jAKAU8xXRMXXlH+sqCvVCoK5GAFkmb+2I=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="{% static 'js/manager.min.js' %}"></script>
 {% endblock %}
