--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,13 @@
 <html lang="en-us">
     <head>
     {% block head %}
-        <title>{% block title %}University of Central Florida Announcements{% endblock %}</title>
+        <title>{% block title %}Announcements - University of Central Florida - Orlando, FL{% endblock %}</title>
         <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="{% block meta_description %}{% endblock %}">
         <meta name="application-name" content="UCF Announcements">
+        <link rel="shortcode icon" type="image/png" href="{% static 'favicon.ico' %}">
         {% block meta %}{% endblock %}
         {% block header_scripts %}{% endblock %}
         <link rel="stylesheet" href="{% static 'css/style.min.css' %}">
