--- a/templates/front-end-base.html
+++ b/templates/front-end-base.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}{{ block.super }}{% endblock %}
+{% block meta_description %}{{ block.super }}{% endblock %}
 {% block header_nav %}
     {% include 'partials/_header.html' %}
 {% endblock %}
