Added robots.txt and updated home page description

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,6 @@
-{% extends 'front-end-base.html' %} {% load announcements %} {% block content_header %}
+{% extends 'front-end-base.html' %} {% load announcements %}
+{% block meta_description %}Community info for UCF students, faculty, staff & alumni. Dont miss upcoming campus changes, volunteer opportunities, continuing education, workshops & more{% endblock %}
+{% block content_header %}
 <div class="row">
   <div class="col-md-8">
     <h1>Announcements</h1>
