Fixed incorrect item values for link URLs

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -7,7 +7,7 @@
             <ul id="footer-menu" class="menu list-unstyled list-inline text-center">
             {% for item in footer_menu_items %}
                 <li class="menu-item list-inline-item">
-                    <a href="{{ item.link }}">{{ item.title }}</a>
+                    <a href="{{ item.url }}">{{ item.title }}</a>
                 </li>
             {% endfor %}
             </ul>
