Updated card description contents to be filtered using truncatewords_html instead of truncatewords to account for html markup

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
           <div class="card h-100">
             <h2 class="h4 card-header">{{ item.title }}</h2>
             <div class="card-block">
-              <p>{{ item.description|safe|truncatewords:25 }}</p>
+              <p>{{ item.description|safe|truncatewords_html:25 }}</p>
               <dl>
                 <dt>Audience: </dt>
                 <dd>
