--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,10 @@
     {% endblock %}
     </head>
     <body>
+        <a href="#content" class="skip-navigation bg-complementary text-inverse box-shadow-soft">Skip to main content</a>
+        <div id="ucfhb"></div>
         {% block header_nav %}{% endblock %}
-        <main class="mt-4 main-content">
+        <main id="content" class="mt-4 main-content">
         {% block content %}
             <div class="container">
             {% block content_header %}{% endblock %}
