Revert "awqdd defaults and fix containerfile to make image build work"
This reverts commit 70cc26fa8f60cc99e94aed98c512c6ec7b12a178.

--- a/.env.templ
+++ b/.env.templ
@@ -2,7 +2,7 @@
 # DEBUG=True
 
 # Comma separated list of allowed hosts
-ALLOWED_HOSTS=127.0.0.1,0.0.0.0
+# ALLOWED_HOSTS=127.0.0.1,0.0.0.0
 
 # Secret Key
 # SECRET_KEY=INSERTSECRETKEYHERE
@@ -28,8 +28,6 @@ ALLOWED_HOSTS=127.0.0.1,0.0.0.0
 # Note: In production environments, this should match the directory
 # configured in apache/nginx that is being used for static files
 # STATIC_URL=/static/
-
-STATIC_ROOT=/static/
 
 # Force Script Name: Determines the path that should be used when creating cookies
 # FORCE_SCRIPT_NAME=/
