make containerfile changes

--- a/.env.templ
+++ b/.env.templ
@@ -29,6 +29,8 @@
 # configured in apache/nginx that is being used for static files
 # STATIC_URL=/static/
 
+# STATIC_ROOT=/static/
+
 # Force Script Name: Determines the path that should be used when creating cookies
 # FORCE_SCRIPT_NAME=/
 
