--- a/.env.templ
+++ b/.env.templ
@@ -31,6 +31,33 @@
 
 # STATIC_ROOT=/static/
 
+# Static files settings for S3 bucket
+# See https://testdriven.io/blog/storing-django-static-and-media-files-on-amazon-s3
+
+# USE_S3 = os.getenv('USE_S3') == 'TRUE'
+#
+# if USE_S3:
+#     # AWS settings
+#     AWS_ACCESS_KEY_ID = os.getenv('AWS_ACCESS_KEY_ID')
+#     AWS_SECRET_ACCESS_KEY = os.getenv('AWS_SECRET_ACCESS_KEY')
+#     AWS_STORAGE_BUCKET_NAME = os.getenv('AWS_STORAGE_BUCKET_NAME')
+#     AWS_DEFAULT_ACL = 'public-read'
+#     AWS_S3_CUSTOM_DOMAIN = f'{AWS_STORAGE_BUCKET_NAME}.s3.amazonaws.com'
+#     AWS_S3_OBJECT_PARAMETERS = {'CacheControl': 'max-age=86400'}
+#     # S3 static settings    
+#     AWS_LOCATION = 'static'
+#     STATIC_URL = f'https://{AWS_S3_CUSTOM_DOMAIN}/{AWS_LOCATION}/'
+#     STATICFILES_STORAGE = 'storages.backends.s3boto3.S3Boto3Storage'
+# else:
+#     STATIC_URL = '/static/'
+#     STATIC_ROOT = os.path.join(BASE_DIR, 'static')
+#
+# STATICFILES_DIRS = (os.path.join(BASE_DIR, 'static'),)
+#
+# MEDIA_URL = '/mediafiles/'
+# MEDIA_ROOT = os.path.join(BASE_DIR, 'mediafiles')
+
+
 # Force Script Name: Determines the path that should be used when creating cookies
 # FORCE_SCRIPT_NAME=/
 
